k8s/distributed_tracing_example/templates/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: weather-service
  namespace: distributed-tracing-example
spec:
  host: weather-service-destination-rule
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 500
      http:
        http2MaxRequests: 10000
        maxRequestsPerConnection: 10
        idleTimeout: 30s
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: owm-service-destination-rule
  namespace: distributed-tracing-example
spec:
  host: owm-service
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      tcp:
        maxConnections: 500
      http:
        http2MaxRequests: 10000
        maxRequestsPerConnection: 10
        idleTimeout: 30s
